# sync-data

./: .gitignore  HOW_TO_USE.md  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  QDRANT查询方案.md  QUICK_START.md  README.md  REFACTOR_COMPLETE.md  REFACTOR_SUMMARY.md  SAFETY_GUIDE.md  generate_embedding.py  main.py  test_upload.py  upload_to_api.py  使用说明.txt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md
sync_data/: __init__.py  embedding_service.py  qdrant_manager.py
tools/sync-kb-to-qdrant/: .env.example  README.md  pyproject.toml
tools/sync-kb-to-qdrant/scripts/: check_database.py  cleanup_collection.py
tools/sync-kb-to-qdrant/src/: database.py  main.py  migrator.py
tools/sync-kb-to-qdrant/tests/: quick_test.py  test_query.py
